corrected vertical spacing

--- a/src/UIDesigning.css
+++ b/src/UIDesigning.css
@@ -41,7 +41,7 @@
 	bottom: 0%;
 }
 .location-wrapper{
-	padding-top: 14%;
+	padding-top: 124px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -223,7 +223,7 @@
 	margin-top: 12px;
 }
 .about-div-wrapper{
-	padding: 2% 10% 0% 10%;
+	padding: 2% 10% 0% 5%;
 	font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 500;
@@ -312,7 +312,7 @@
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		padding-top: 42%;
+		padding-top: 142px;
 	}
 	.about-link-wrapper{
 		position: absolute;
